[gd_scene load_steps=8 format=3 uid="uid://bcx2rpy3kh0r6"]

[ext_resource type="TileSet" uid="uid://uvyca8uwcqd5" path="res://misc/map.tres" id="1_ujaxs"]
[ext_resource type="Script" path="res://scripts/finale.gd" id="1_xuuhp"]
[ext_resource type="Texture2D" uid="uid://cju6qf6nijxw3" path="res://sprites/shadow.png" id="2_6q4gc"]
[ext_resource type="Texture2D" uid="uid://dxfjnxiv5vuqo" path="res://sprites/sob.png" id="2_c36c2"]
[ext_resource type="Script" path="res://scripts/npc.gd" id="2_pvx2t"]
[ext_resource type="Resource" uid="uid://dljta2qwhm7x1" path="res://resources/dialogue_lines/area_3/final.tres" id="3_hj4sl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw2x5"]
size = Vector2(90, 90)

[node name="Finale" type="Node2D"]
process_mode = 3
script = ExtResource("1_xuuhp")

[node name="TileMap" type="TileMap" parent="."]
clip_children = 2
visibility_layer = 4
z_index = -1
y_sort_enabled = true
tile_set = ExtResource("1_ujaxs")
cell_quadrant_size = 24
format = 2
layer_0/name = "Ground"
layer_0/z_index = -3
layer_0/tile_data = PackedInt32Array(196611, 131077, 2, 131075, 131077, 1, 65539, 131077, 1, 3, 131077, 1, -65533, 131077, 1, -131069, 131077, 1, -196605, 131077, 1, -262141, 131077, 0, 196610, 65541, 2, 131074, 65541, 1, 65538, 65541, 1, 2, 65541, 1, -65534, 65541, 1, -131070, 65541, 1, -196606, 65541, 1, -262142, 65541, 0, 196609, 65541, 2, 131073, 65541, 1, 65537, 65541, 1, 1, 65541, 1, -65535, 65541, 1, -131071, 65541, 1, -196607, 65541, 1, -262143, 327685, 2, 196608, 65541, 2, 131072, 65541, 1, 65536, 65541, 1, 0, 65541, 1, -65536, 65541, 1, -131072, 65541, 1, -196608, 65541, 1, -262144, 65541, 1, 262143, 65541, 2, 196607, 65541, 1, 131071, 65541, 1, 65535, 65541, 1, -1, 65541, 1, -65537, 65541, 1, -131073, 65541, 1, -196609, 65541, 1, 262142, 65541, 2, 196606, 65541, 1, 131070, 65541, 1, 65534, 65541, 1, -2, 65541, 1, -65538, 65541, 1, -131074, 65541, 1, -196610, 393221, 2, 262141, 65541, 2, 196605, 65541, 1, 131069, 65541, 1, 65533, 65541, 1, -3, 65541, 1, -65539, 65541, 1, -131075, 65541, 1, -196611, 65541, 0, 262140, 5, 2, 196604, 5, 1, 131068, 5, 1, 65532, 5, 1, -4, 5, 1, -65540, 5, 1, -131076, 5, 1, -196612, 5, 0, -327679, 131077, 1, -393215, 131077, 1, -458751, 131077, 1, -524287, 131077, 1, -589823, 131077, 1, -655359, 131077, 1, -720895, 131077, 1, -786431, 327685, 1, -327680, 65541, 1, -393216, 65541, 1, -458752, 65541, 1, -524288, 65541, 1, -589824, 65541, 1, -655360, 65541, 1, -720896, 65541, 1, -786432, 65541, 1, -262145, 65541, 1, -327681, 65541, 1, -393217, 65541, 1, -458753, 65541, 1, -524289, 65541, 1, -589825, 65541, 1, -655361, 65541, 1, -720897, 65541, 1, -262146, 5, 1, -327682, 5, 1, -393218, 5, 1, -458754, 5, 1, -524290, 5, 1, -589826, 5, 1, -655362, 5, 1, -720898, 393221, 1, -786427, 131077, 2, -851963, 131077, 1, -917499, 131077, 1, -983035, 131077, 1, -1048571, 131077, 1, -1114107, 131077, 1, -1179643, 131077, 1, -1245179, 131077, 1, -1310715, 131077, 1, -1376251, 131077, 1, -1441787, 131077, 1, -1507323, 131077, 0, -786428, 65541, 2, -851964, 65541, 1, -917500, 65541, 1, -983036, 65541, 1, -1048572, 65541, 1, -1114108, 65541, 1, -1179644, 65541, 1, -1245180, 65541, 1, -1310716, 65541, 1, -1376252, 65541, 1, -1441788, 65541, 1, -1507324, 65541, 0, -786429, 65541, 2, -851965, 65541, 1, -917501, 65541, 1, -983037, 65541, 1, -1048573, 65541, 1, -1114109, 65541, 1, -1179645, 65541, 1, -1245181, 65541, 1, -1310717, 65541, 1, -1376253, 65541, 1, -1441789, 65541, 1, -1507325, 65541, 0, -786430, 65541, 2, -851966, 65541, 1, -917502, 65541, 1, -983038, 65541, 1, -1048574, 65541, 1, -1114110, 65541, 1, -1179646, 65541, 1, -1245182, 65541, 1, -1310718, 65541, 1, -1376254, 65541, 1, -1441790, 65541, 1, -1507326, 65541, 0, -851967, 65541, 1, -917503, 65541, 1, -983039, 65541, 1, -1048575, 65541, 1, -1114111, 65541, 1, -1179647, 65541, 1, -1245183, 65541, 1, -1310719, 65541, 1, -1376255, 65541, 1, -1441791, 65541, 1, -1507327, 65541, 0, -851968, 65541, 1, -917504, 65541, 1, -983040, 65541, 1, -1048576, 65541, 1, -1114112, 65541, 1, -1179648, 65541, 1, -1245184, 65541, 1, -1310720, 65541, 1, -1376256, 65541, 1, -1441792, 65541, 1, -1507328, 65541, 0, -786433, 65541, 1, -851969, 65541, 1, -917505, 65541, 1, -983041, 65541, 1, -1048577, 65541, 1, -1114113, 65541, 1, -1179649, 65541, 1, -1245185, 65541, 1, -1310721, 65541, 1, -1376257, 65541, 1, -1441793, 65541, 0, -786434, 65541, 1, -851970, 65541, 1, -917506, 65541, 1, -983042, 65541, 1, -1048578, 65541, 1, -1114114, 65541, 1, -1179650, 65541, 1, -1245186, 65541, 1, -1310722, 65541, 1, -1376258, 65541, 1, -1441794, 65541, 0, -720899, 65541, 2, -786435, 65541, 1, -851971, 65541, 1, -917507, 65541, 1, -983043, 65541, 1, -1048579, 65541, 1, -1114115, 65541, 1, -1179651, 65541, 1, -1245187, 65541, 1, -1310723, 65541, 1, -1376259, 65541, 1, -1441795, 65541, 0, -720900, 65541, 2, -786436, 65541, 1, -851972, 65541, 1, -917508, 65541, 1, -983044, 65541, 1, -1048580, 65541, 1, -1114116, 65541, 1, -1179652, 65541, 1, -1245188, 65541, 1, -1310724, 65541, 1, -1376260, 65541, 1, -1441796, 65541, 0, -720901, 65541, 2, -786437, 65541, 1, -851973, 65541, 1, -917509, 65541, 1, -983045, 65541, 1, -1048581, 65541, 1, -1114117, 65541, 1, -1179653, 65541, 1, -1245189, 65541, 1, -1310725, 65541, 1, -1376261, 65541, 1, -1441797, 65541, 0, -720902, 5, 2, -786438, 5, 1, -851974, 5, 1, -917510, 5, 1, -983046, 5, 1, -1048582, 5, 1, -1114118, 5, 1, -1179654, 5, 1, -1245190, 5, 1, -1310726, 5, 1, -1376262, 5, 1, -1441798, 5, 0, 327676, 6, 0, 327677, 6, 0, 327678, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262139, 0, 0, 196603, 0, 0, 131067, 0, 0, 65531, 0, 0, -5, 0, 0, -65541, 0, 0, -131077, 0, 0, -196613, 0, 0, -262148, 0, 0, -262147, 0, 0, -327683, 0, 0, -393219, 0, 0, -458755, 0, 0, -524291, 0, 0, -589827, 0, 0, -655363, 6, 0, -655364, 6, 0, -655365, 6, 0, -655366, 6, 0, -720903, 0, 0, -786439, 0, 0, -851975, 0, 0, -917511, 0, 0, -983047, 0, 0, -1048583, 0, 0, -1114119, 0, 0, -1179655, 0, 0, -1245191, 0, 0, -1310727, 0, 0, -1376263, 0, 0, -1441799, 0, 0, -1507334, 0, 0, -1507333, 0, 0, -1507332, 0, 0, -1507331, 0, 0, -1507330, 0, 0, -1507329, 0, 0, -1572864, 0, 0, -1572863, 0, 0, -1572862, 0, 0, -1572861, 0, 0, -1572860, 0, 0, -1572859, 0, 0, -1507322, 0, 0, -1441786, 0, 0, -1376250, 0, 0, -1310714, 0, 0, -1245178, 0, 0, -1179642, 0, 0, -1114106, 0, 0, -1048570, 0, 0, -983034, 0, 0, -917498, 0, 0, -851962, 0, 0, -786426, 0, 0, -720891, 6, 0, -720892, 6, 0, -720893, 6, 0, -720894, 6, 0, -655358, 0, 0, -589822, 0, 0, -524286, 0, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()
layer_2/name = ""
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Underground"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = -4
layer_3/tile_data = PackedInt32Array()

[node name="Final" type="Area2D" parent="."]
process_mode = 1
z_index = -1
y_sort_enabled = true
position = Vector2(0, -412)
script = ExtResource("2_pvx2t")
lines = ExtResource("3_hj4sl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Final"]
shape = SubResource("RectangleShape2D_uw2x5")

[node name="Shadow" type="Sprite2D" parent="Final"]
modulate = Color(1, 1, 1, 0.603922)
position = Vector2(0, 12)
texture = ExtResource("2_6q4gc")

[node name="Sprite2D" type="Sprite2D" parent="Final"]
texture = ExtResource("2_c36c2")

[node name="Validation" type="NativeConfirmationDialog" parent="."]
buttons_texts = 1
title = "CONFIRMATION"
dialog_text = "ARE YOU READY TO END YOUR PROGRAM?"

[node name="Confirm" type="NativeConfirmationDialog" parent="."]
buttons_texts = 1
title = "CONFIRMATION"
dialog_text = "ARE YOU SURE?"

[node name="Again" type="NativeConfirmationDialog" parent="."]
buttons_texts = 1
title = "CONFIRMATION"
dialog_text = "DO YOU WANT TO TRY AGAIN?"

[node name="Stats" type="NativeAcceptDialog" parent="."]
title = "PROGRAM STATISTICS"
dialog_icon = 0

[connection signal="dialogue_finished" from="Final" to="." method="_on_final_dialogue_finished"]
[connection signal="canceled" from="Validation" to="." method="_on_validation_canceled"]
[connection signal="confirmed" from="Validation" to="." method="_on_validation_confirmed"]
[connection signal="canceled" from="Confirm" to="." method="_on_confirm_canceled"]
[connection signal="confirmed" from="Confirm" to="." method="_on_confirm_confirmed"]
[connection signal="canceled" from="Again" to="." method="_on_again_canceled"]
[connection signal="confirmed" from="Again" to="." method="_on_again_confirmed"]
